fix: correct canvas height on mobile devices with Webkit

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,11 @@ $link-dark: $cyan;
   min-height: 40svh;
 }
 
+#canvas > * {
+  /* webkit's mobile viewport bug fix */
+  height: -webkit-fill-available; 
+}
+
 #editor {
   background: $background;
   min-height: 40svh;
